html actualizado no finalizado

--- a/intro-web/index.html
+++ b/intro-web/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adopción de gatitos</title>
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/256/6988/6988878.png" type="image/x-icon">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="https://cdn-icons-png.flaticon.com/256/6988/6988878.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <h1>¡Adopta un gatito! 🐈</h1>
-    <p>Si estás interesad@ en darle una segunda oportunidad a un gatito, da clic <a href="https://gatogazzu.org/" >aquí</a>.</p>
-</body>
+    <p>
+      Si estás interesad@ en darle una segunda oportunidad a un gatito, da clic
+      <a href="https://gatogazzu.org/">aquí</a>.
+    </p>
+
+    <!-- alt + shift + a para hacer un comentario -->
+    <!-- hr es una línea que divide secciones -->
+    <!-- br es un salto de línea -->
+
+    <br />
+    <hr />
+    <br />
+
+    <h1>Adopción responsable: conoce más información de los gatitos</h1>
+
+    <img src="" alt="descripción" width="400" />
+
+    <div>
+      <!-- Lista ordenada -->
+      <h2>Top 5 de prodcutos necesarios para su cuidado</h2>
+
+      <ol>
+        <li>
+          <a href="" target="_blank">Uno</a>
+          <!-- target="-blank" para no perder la página en caso de usar enlaces EXTERNOS -->
+        </li>
+        <li>
+          <a href="" target="_blank">Dos</a>
+        </li>
+        <li>
+          <a href="" target="_blank">Tres</a>
+        </li>
+        <li>
+          <a href="" target="_blank">Cuatro</a>
+        </li>
+        <li>
+          <a href="" target="_blank">Cinco</a>
+        </li>
+      </ol>
+    </div>
+
+    <h2>Razas más comunes de gatitos</h2>
+    <ul>
+      Uno
+    </ul>
+  </body>
 </html>
