html actualizado con enlaces e imagenes

--- a/intro-web/index.html
+++ b/intro-web/index.html
@@ -25,37 +25,137 @@
     <hr />
     <br />
 
-    <h1>Adopción responsable: conoce más información de los gatitos</h1>
+    <h1>Adopción responsable: conoce más información acerca de los mininos</h1>
 
-    <img src="" alt="descripción" width="400" />
+    <img
+      src="https://live-production.wcms.abc-cdn.net.au/e7568587b033fe45a5a26e4434cb7682?impolicy=wcms_crop_resize&cropH=1080&cropW=1920&xPos=0&yPos=0&width=862&height=485"
+      alt="Collage con siete gatitos"
+      width="700"
+    />
 
     <div>
       <!-- Lista ordenada -->
       <h2>Top 5 de prodcutos necesarios para su cuidado</h2>
+      <p>¡Comenzando por lo más básico!</p>
 
       <ol>
         <li>
-          <a href="" target="_blank">Uno</a>
+          <a href="https://purina.com.mx/proplan/gatos/adultos" target="_blank"
+            >Alimento Balanceado</a
+          >
+          <p>Específico para gatos y adecuado para su edad.</p>
           <!-- target="-blank" para no perder la página en caso de usar enlaces EXTERNOS -->
         </li>
         <li>
-          <a href="" target="_blank">Dos</a>
+          <a
+            href="https://skoon.com.mx/comprar-arena-para-gato/"
+            target="_blank"
+            >Arena para gatos</a
+          >
+          <p>Y por supuesto, una caja de arena.</p>
         </li>
         <li>
-          <a href="" target="_blank">Tres</a>
+          <a
+            href="https://www.amazon.com.mx/Fancy-Pets-Platos-Inclinados-Elevados/dp/B0BXB9CC22/ref=zg_bs_g_12478706011_d_sccl_1/143-0617550-9876562?psc=1"
+            target="_blank"
+            >Platos de comida y agua</a
+          >
+          <p>
+            Importante que sean recipientes individuales y se encuentren
+            alejados.
+          </p>
         </li>
         <li>
-          <a href="" target="_blank">Cuatro</a>
+          <a
+            href="https://www.amazon.com.mx/Rascador-Interactivo-Primavera-Corrugado-Ejercicio/dp/B0B7S41SFB/ref=sr_1_2?adgrpid=1154487947313104&dib=eyJ2IjoiMSJ9.Wh0m8OrF2rDuqjY4my1pUlX4kkKJFPQ3FyR2wQ_V5XkGRbMY1Tj6qK7_vBBv3CyKGqr7o8UKAS6VhQ1werfALpmcb6GVccgUptn4jp820tgvxbSnzHX5TwDMunb3pnuQYszVqq7eBfeDN1bQAAvgkI0jtZU2MsL6z4ZlBLVeum0cIHlW7vSnWAeyBembY2oHt4PC4RCzIcEIahNbnxCU_DAMJzMFLSpf2rgTxlmMWTQGHkbQ9Ko0NL_FW07UcF1GkrMjcKmqcFD2k4MPBjnEGk7cRu-8QhQs2xC-vokZ7eI.qNZTW6fzFeGDb3hpHpWdMyp8-n197V42TAB7JMuCA3o&dib_tag=se&hvadid=72155721558813&hvbmt=bp&hvdev=c&hvlocphy=178210&hvnetw=o&hvqmt=p&hvtargid=kwd-72155994832338%3Aloc-119&hydadcr=27012_14534610&keywords=juguetes+para+gatos+rascador&qid=1731036411&sr=8-2&ufe=app_do%3Aamzn1.fos.de93fa6a-174c-4df7-be7c-5bc8e9c5a71b"
+            target="_blank"
+            >Juguetes y rascadores</a
+          >
+          <p>
+            Ayudan a mantener sus garras saludables y proporcionan
+            entretenimiento.
+          </p>
         </li>
         <li>
-          <a href="" target="_blank">Cinco</a>
+          <a
+            href="https://www.amazon.com.mx/ZHEYU-Cama-port%C3%A1til-para-Desmontable/dp/B0DBVKVM7B/ref=sr_1_10?adgrpid=1157786796015699&dib=eyJ2IjoiMSJ9.9RFP1PTvlz7yxGc0oU2YWsLltfZvbrAjlufbia5kOMQnzxLITGb6Ub2Z5-TJP2tVjWpagwjmQEfYecu9eTBpp7TjUmyYKJO5N1EhpITWugY6dCUNYq-ro-4dzhu52-vKGOO_F6qdUg_wvJmULOWK6OGaBTxp6GkoCsIUoBmp1sO8uc55XnExGH2Fl4R5zDmNTH7H5_tkqczd93rtpZmnWUpTPQ9s5O-Wss3QInMBp2pilpWpHtW5nlONtL_SbFc14BqtK_E_FescG76Hd-oMuDUKiPV1W6stjZ4JEFDdV14.GcWLf-8S9Yf87a2xvniOzcRDQDS00ip9QmrFxerHm90&dib_tag=se&hvadid=72361890415815&hvbmt=bb&hvdev=c&hvlocphy=178210&hvnetw=o&hvqmt=b&hvtargid=kwd-72362346481524%3Aloc-119&hydadcr=1592_13496936&keywords=cama%2Bpara%2Bgato%2Brectangular&msclkid=559633da90601df1e74554f7157ccd71&qid=1731036448&s=pet-supplies&sr=1-10&ufe=app_do%3Aamzn1.fos.de93fa6a-174c-4df7-be7c-5bc8e9c5a71b&th=1"
+            target="_blank"
+            >Cama cómoda o manta</a
+          >
+          <p>
+            Aunque los gatitos pueden dormir en cualquier lugar, una cama cómoda
+            les dará un lugar seguro donde descansar.
+          </p>
         </li>
       </ol>
     </div>
 
-    <h2>Razas más comunes de gatitos</h2>
-    <ul>
-      Uno
-    </ul>
+    <div>
+      <!-- Lista desordenada -->
+      <h2>Razas más comunes de gatitos</h2>
+      <p>En México las siguientes razas son las más comunes:</p>
+      <ul>
+        <li>
+          <a href="https://mymundogatos.com/gatos-mestizos/" target="_blank"
+            >Gato Mestizo</a
+          >
+          <br />
+          <img
+            src="https://www.pepuptheday.com/uploads/inbox/4518_l.jpg"
+            alt="Fotografía de gato mestizo"
+            width="100"
+          />
+        </li>
+        <li>
+          <a
+            href="https://es.wikipedia.org/wiki/American_shorthair"
+            target="_blank"
+            >Gato Americano de Pelo Corto</a
+          >
+          <br />
+          <img
+            src="https://th.bing.com/th/id/R.f8c123729e757bcc2b265a126f756bbf?rik=8D4FXIuM2H3JGg&pid=ImgRaw&r=0"
+            alt="Fotografía de gato americano pelo corto"
+            width="200"
+          />
+        </li>
+        <li>
+          <a
+            href="https://es.cats.com/razas-de-gatos/gato-europeo-de-pelo-corto"
+            target="_blank"
+            >Gato Europeo de Pelo Corto</a
+          >
+          <br />
+          <img
+            src="https://th.bing.com/th/id/OIP.H9BP6z9FR4dZIt3vzjo0EQHaFj?rs=1&pid=ImgDetMain"
+            alt="Fotografía de gato europeo pelo corto"
+            width="200"
+          />
+        </li>
+        <li>
+          <a href="https://es.wikipedia.org/wiki/Bombay_(gato)" target="_blank"
+            >Gato Bombay</a
+          >
+          <br />
+          <img
+            src="https://www.thesprucepets.com/thmb/RnGTM5ENlWu-D4oND397jksaUCw=/1911x0/filters:no_upscale():strip_icc()/bombay-cat-full-profile-history-and-care-5202250-hero-85810f454cf84a7786e650136a10f91c.jpg"
+            alt="Fotografía de gato bombay"
+            width="200"
+          />
+        </li>
+        <li>
+          <a href="https://es.wikipedia.org/wiki/Azul_ruso" target="_blank"
+            >Gato Azul Ruso</a
+          >
+          <br />
+          <img
+            src="https://cdn.shopify.com/s/files/1/0087/3798/0475/articles/Russian_Blue_Cat_American_type_1400x.jpg?v=1603963829"
+            alt="Fotografía de gato azul ruso"
+            width="200"
+          />
+        </li>
+      </ul>
+    </div>
+
   </body>
 </html>
